[gd_scene load_steps=2 format=3 uid="uid://bv8yxq1n4n6yl"]

[ext_resource type="Script" path="res://src/Scripts/LifecycleStressTest.gd" id="1_4x2w8"]

[node name="LifecycleStressTest" type="Node3D"]
script = ExtResource("1_4x2w8")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TestControls" type="VBoxContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -10.0

[node name="TestLabel" type="Label" parent="UI/TestControls"]
layout_mode = 2
text = "Object Lifecycle Stress Tests"

[node name="HSeparator" type="HSeparator" parent="UI/TestControls"]
layout_mode = 2

[node name="RunStressTest" type="Button" parent="UI/TestControls"]
layout_mode = 2
text = "Run Stress Test (1000 cycles)"

[node name="RunMemoryTest" type="Button" parent="UI/TestControls"]
layout_mode = 2
text = "Run Memory Leak Test"

[node name="RunConcurrencyTest" type="Button" parent="UI/TestControls"]
layout_mode = 2
text = "Run Concurrency Test"

[node name="ClearResults" type="Button" parent="UI/TestControls"]
layout_mode = 2
text = "Clear Results"

[node name="ResultsLabel" type="Label" parent="UI/TestControls"]
layout_mode = 2
text = "Results will appear here..."
autowrap_mode = 3

[connection signal="pressed" from="UI/TestControls/RunStressTest" to="." method="_on_run_stress_test_pressed"]
[connection signal="pressed" from="UI/TestControls/RunMemoryTest" to="." method="_on_run_memory_test_pressed"]
[connection signal="pressed" from="UI/TestControls/RunConcurrencyTest" to="." method="_on_run_concurrency_test_pressed"]
[connection signal="pressed" from="UI/TestControls/ClearResults" to="." method="_on_clear_results_pressed"]